; ModuleID = '/home/carl/AnghaBench/8cc/extr_parse.c_read_default_label.c'
source_filename = "/home/carl/AnghaBench/8cc/extr_parse.c_read_default_label.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@defaultcase = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [18 x i8] c"duplicate default\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*)* @read_default_label to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @read_default_label(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = call i32 @expect(i8 signext 58)
  %4 = load i64, i64* @defaultcase, align 8
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %9

6:                                                ; preds = %1
  %7 = load i32*, i32** %2, align 8
  %8 = call i32 @errort(i32* %7, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0))
  br label %9

9:                                                ; preds = %6, %1
  %10 = call i64 (...) @make_label()
  store i64 %10, i64* @defaultcase, align 8
  %11 = load i64, i64* @defaultcase, align 8
  %12 = call i32 @ast_dest(i64 %11)
  %13 = call i32* @read_label_tail(i32 %12)
  ret i32* %13
}

declare dso_local i32 @expect(i8 signext) #1

declare dso_local i32 @errort(i32*, i8*) #1

declare dso_local i64 @make_label(...) #1

declare dso_local i32* @read_label_tail(i32) #1

declare dso_local i32 @ast_dest(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
